# FoodService

./: CMakeLists.txt  README.md  cat  vcpkg.json
common/: CMakeLists.txt
common/include/: Database.h  JwtManager.h  JwtMiddleware.h  PasswordHasher.h  UserValidator.h
common/src/: Database.cpp  JwtManager.cpp  PasswordHasher.cpp  UserValidator.cpp
services/ApiGateway/: CMakeLists.txt
services/ApiGateway/include/client/: HttpClient.h  OrderClient.h  RestaurantClient.h  UserClient.h
services/ApiGateway/src/: ApiGateway.cpp  main.cpp
services/ApiGateway/src/client/: HttpClient.cpp  OrderClient.cpp  RestaurantClient.cpp  UserClient.cpp
services/NotificationService/: CMakeLists.txt
services/NotificationService/include/: Notification.h  NotificationController.h  NotificationRepository.h  NotificationService.h
services/NotificationService/src/: Notification.cpp  NotificationController.cpp  NotificationRepository.cpp  NotificationService.cpp  main.cpp
services/OrderService/: CMakeLists.txt
services/OrderService/include/: Order.h  OrderController.h  OrderRepository.h  OrderService.h
services/OrderService/include/client/: PaymentClient.h  RestaurantClient.h
services/OrderService/src/: Order.cpp  OrderController.cpp  OrderRepository.cpp  OrderService.cpp  main.cpp
services/OrderService/src/client/: PaymentClient.cpp  RestaurantClient.cpp
services/PaymentService/: CMakeLists.txt
services/PaymentService/include/: Payment.h  PaymentController.h  PaymentRepository.h  PaymentService.h
services/PaymentService/include/client/: NotificationClient.h
services/PaymentService/src/: Payment.cpp  PaymentController.cpp  PaymentRepository.cpp  PaymentService.cpp  main.cpp
services/PaymentService/src/client/: NotificationClient.cpp
services/RestaurantService/: CMakeLists.txt
services/RestaurantService/include/: Restaurant.h  RestaurantController.h  RestaurantRepository.h  RestaurantService.h
services/RestaurantService/src/: Restaurant.cpp  RestaurantController.cpp  RestaurantRepository.cpp  RestaurantService.cpp  main.cpp
services/UserService/: CMakeLists.txt
services/UserService/include/: Database.h  User.h  UserController.h  UserRepository.h  UserService.h
services/UserService/src/: User.cpp  UserController.cpp  UserRepository.cpp  UserService.cpp  main.cpp
